# solana-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fly.toml
docs/: COMMANDS.md  DEMO.md
migrations/: 001_initial_schema.sql  002_add_slot_block_fields.sql  003_indexer_checkpoint.sql
src/: context.rs  lib.rs
src/api/: mod.rs
src/core/: channels.rs  enrichment_limiter.rs  leader_cache.rs  mod.rs  runtime.rs  slot_pipeline.rs  types.rs
src/core/account_watcher/: mod.rs
src/core/commands/: display.rs  handlers.rs  mod.rs  query.rs  serve.rs  start.rs  wallets.rs  watch.rs
src/core/slot_tracker/: mod.rs
src/data_sources/: mod.rs  solana_rpc.rs  yellowstone_grpc.rs
src/storage/: database.rs  factory.rs  mod.rs  postgres.rs  queries.rs  repository.rs  sqlite.rs
src/storage/cache/: account_store.rs  l1_hot_slots.rs  l2_transactions.rs  l3_accounts.rs  mod.rs  multi_cache.rs
src/testing/: context.rs  fixtures.rs  mock_db.rs  mock_sources.rs  mod.rs
src/utils/: cli_animations.rs  config.rs  errors.rs  icons.rs  logger.rs  metrics.rs  mod.rs  redact.rs  shutdown.rs  theme.rs
tests/: integration.rs
