[package]
name = "solana-stream-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Just_Anniee <145839789+Annieeeee11@users.noreply.github.com>"]
description = "Real-time Solana blockchain indexer with MultiCache and optional HTTP API"
license = "MIT"
repository = "https://github.com/Annieeeee11/solana-indexer"
readme = "README.md"
homepage = "https://github.com/Annieeeee11/solana-indexer"
keywords = ["solana", "blockchain", "indexer", "yellowstone", "streaming"]
categories = ["command-line-utilities", "database"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/migrations/**/*",
    "/src/**/*",
]

[features]
default = ["sqlite", "postgres"]
sqlite = []
postgres = []

[dependencies]
# HTTP API — pinned to 0.7.x (`:param` routes). Yellowstone/Tonic pulls axum 0.8 transitively.
axum = "=0.7.9"
clap = { version = "4.5.46", features = ["derive", "color", "env"] }
solana-sdk = "3.0.0"
solana-rpc-client = "3.0.0"
solana-transaction-status = "3.0.0"
solana-rpc-client-api = "3.0.0"

tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync", "time", "macros", "signal", "net"] }

yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
rustls = { version = "0.23", features = ["ring"] }
bs58 = "0.5.1"

colored = "2.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.133"

futures = "0.3.31"
dotenvy = "0.15.7"

sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "migrate"] }
moka = { version = "0.12.10", features = ["future"] }
async-trait = "0.1"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.14"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "solana-stream-indexer"
path = "src/bin/cli.rs"